# python-project-template

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
config/: default.yaml
scripts/: run_api.py  setup.py
src/: hello.py
src/api/: __init__.py  app.py  server.py
src/data/: __init__.py
src/models/: __init__.py
src/utils/: __init__.py  config.py
tests/integration/: test_api.py  test_end_to_end.py
tests/unit/: test_config.py  test_hello.py
